2006-02-10  Gabor Csardi  <csardi@szaffi.rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R
	(get.all.shortest.paths) : added
	* interfaces/R/src/rinterface.c (R_igraph_get_all_shortest_paths) :
	added

2006-02-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c	(R_igraph_motifs_randesu) : added
	* interfaces/R/igraph/R/motifs.R (graph.motifs) : added

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_growing_traits_game) :
	renamed to R_igraph_callaway_traits_game
	(R_igraph_establishment_game) : added
	* interfaces/R/igraph/R/games.R (callaway.traits.game) : updated
	(establishment.game) : added

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/other.R (igraph.sample) : correct bug

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (callaway.traits.game) : added
	* interfaces/R/src/rinterface.c (R_igraph_growing_traits_game) : added

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_isoclass_34)
	(R_igraph_isomorphic_34) : updated
	
2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (plot.igraph) : correct bug for
	empty graphs

	* interfaces/R/igraph/R/topology.R (graph.isoclass)
	(graph.isomorphic) : added
	* interfaces/R/src/rinterface.c (R_igraph_isoclass_34)
	(R_igraph_isomorphic_34) : added

2006-02-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/plot.R (rglplot.igraph) : omit labels if NA

2006-02-01  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/layout.R (layout.random)
	(layout.fruchterman.reingold, layout.kamada.kawai) : added dim argument
	(layout.sphere) : added
	(i.layout.norm) : bug corrected
	* interfaces/R/src/rinterface.c (R_igraph_layout_kamada_kawai_3d)
	(R_igraph_layout_fruchterman_reingold_3d)
	(R_igraph_layout_random_3d, R_igraph_layout_sphere) : added
