@@ -113,4 +113,5 @@ export(measure.dynamics.idage)
 
 # isomorphism, motifs
 
-export(graph.isoclass, graph.isomorphic, graph.motifs)
+export(graph.isoclass, graph.isomorphic, graph.motifs,
+       graph.motifs.est, graph.isocreate)
